--- a/test/src/index.css
+++ b/test/src/index.css
@@ -38,6 +38,7 @@ h1 {
 }
 
 button {
+  max-width: max-content;
   border-radius: 8px;
   border: 1px solid transparent;
   padding: 0.6em 1.2em;
@@ -54,6 +55,21 @@ button:hover {
 button:focus,
 button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
+}
+
+h1 {
+  margin: 0;
+}
+
+p {
+  max-width: max-content;
+}
+
+.app {
+  padding: 0 15vw;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
 }
 
 @media (prefers-color-scheme: light) {
