--- a/test/src/index.css
+++ b/test/src/index.css
@@ -57,11 +57,15 @@ button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
 }
 
+body {
+  min-height: 200vh;
+}
+
 h1 {
   margin: 0;
 }
 
-p {
+.test {
   max-width: max-content;
 }
 
